Updated layout issues on the testimonial section

--- a/src/Components/AboutSection/AboutSection.scss
+++ b/src/Components/AboutSection/AboutSection.scss
@@ -52,8 +52,14 @@
 
 /* Media Queries */
 
-@media (max-width: 999px) {
+@media (max-width: 599px) {
   .about-section {
-    margin-top: 25rem;
+    margin-top: 8rem;
   }
 }
+
+// @media (max-width: 999px) {
+//   .about-section {
+//     margin-top: 25rem;
+//   }
+// }
